ingress/video-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: video-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`video.anup.co.in`)
      kind: Rule
      services:
        - name: video-svc
          port: 3000
  tls:
    certResolver: letsencrypt
